--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,10 +8,6 @@ color: white;
 }
 
 
-p{
-  text-shadow: 2px 2px limegreen;
-}
-
 .password{
   text-align: center;
   margin: 0 auto;
@@ -21,13 +17,13 @@ p{
 
 #header{
  position: relative;
- animation-name: titletext;
+ animation-name: header;
  animation-duration: 25s;
  animation-iteration-count: infinite;
  z-index: 1;
 }
 
-@keyframes titletext {
+@keyframes header {
   0%   {left:0px; top:0px;}
   20%  {left:700px; top:0px;}
   40%  {left:1000px; top: 300px;}
@@ -37,17 +33,34 @@ p{
   100% {left:0px; top:0px;}
 }
 
+#select{
+  position: relative;
+  margin-left: 10%;
+  margin-top: 100px;
+}
 
 #messagebox{
-  width:300px;
-  height: 400px;
+  width:250px;
+  height: 300px;
   background: violet;
   color: LightCyan;
   text-shadow: 30px 30px honeydew;
+  border: 2px solid red;
+}
+
+#select, #textarea{
+    width: 50%;
+    padding: 20%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    width: 40%;
+   float: right;
+   padding: 20px;
+   border: 2px solid red;
 }
 
 #button{
-  background-color: Yellow;
+  background-color: PapayaWhip;
   border-color: blue;
 }
 
