--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,12 @@
 html,
 
-body{
-font-family: Arial, Helvetica, sans-serif;
+@font-face{
+  font-family:'Amagro';
+  src: url('/amagro/Amagro-bold.ttf') format('truetype');
+}
 
+body{
+font-family:'Amagro', serif;
 background: hotpink;
 color: white;
 }
