--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,11 +8,9 @@ html
 }
 
 body{
-font-family: 'arial';
-background-image: url('butterfly.png');
+font-family: 'times new roman';
+background-color: papayawhip;
 color: lightgreen;
--webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: white;
 }
 
 #header{
@@ -52,7 +50,7 @@ color: lightgreen;
 #messagebox{
   width:250px;
   height: 300px;
-  background-image: url('butterfly2.png');
+  background-image: linear-gradient(lightgreen, white);
   color: papayawhip;
   text-shadow: 30px 30px honeydew;
   position:relative;
