--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,10 +22,11 @@ body{
  z-index: 1;
  font-family: 'bespoke';
  font-size:30pt;
+ margin-top: 30%;
 }
 
 .butterfly{
-  height:100%;
+  height:400px;
   margin-left: 50%;
   margin-top:20%;
   position:relative;
