--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,7 +31,7 @@ body{
 .butterfly{
   height:400px;
   margin-left: 70%;
-  margin-top:0%;
+  margin-top:.25%;
   position:relative;
   filter:blur(1.2em);
   resize:vertical;
